--- a/src/main/resources/templates/admin/info/list.html
+++ b/src/main/resources/templates/admin/info/list.html
@@ -61,7 +61,7 @@
                     </div>
 
                     <div class="table-responsive">
-                        <table id="adminTable" class="table table-striped table-hover">
+                        <table id="adminTable" class="table">
                             <thead>
                             <tr>
                                 <th>no</th>
