--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,3 +1,3 @@
 <footer class="text-center py-3" th:fragment="footer">
-    <small>&copy; 2025 Admin System</small>
+    <small>&copy; 2026 PASTA System</small>
 </footer>
