--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -35,6 +35,9 @@
                             <a class="nav-link" th:href="@{/admin/info/list}">어드민 리스트</a>
                         </li>
                         <li class="nav-item mb-1">
+                            <a class="nav-link" th:href="@{/admin/info/sample}">어드민 정보(Sample)</a>
+                        </li>
+                        <li class="nav-item mb-1">
                             <a class="nav-link" th:href="@{/admin/menu/list}">어드민 메뉴 정보</a>
                         </li>
                         <li class="nav-item mb-1">
